feat: major update to support the english language. Bits still remain and functionality is somewhat broken. I think I've missed a few places to properly update.

--- a/template/403.html
+++ b/template/403.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>{% trans "拒绝访问" %} - {% if site_name != None %}{{site_name}} {% else %}{% trans "觅道文档" %}{% endif %}</title>
