--- a/template/app_admin/admin_doc.html
+++ b/template/app_admin/admin_doc.html
@@ -1,44 +1,44 @@
 {% extends 'app_admin/admin_base.html' %}
 {% load static %}
 {% load i18n %}
-{% block title %}文档管理{% endblock %}
+{% block title %}{%trans "文档管理" %}{% endblock %}
 {% block content %}
 <div class="layui-card">
-    <div class="layui-card-header">高级筛选</div>
+    <div class="layui-card-header">{%trans "高级筛选" %}</div>
     <div class="layui-card-body">
         <div class="layui-form">
             <div class="layui-form-item">
-              <label class="layui-form-label">关键词</label>
+              <label class="layui-form-label">{%trans "关键词" %}</label>
               <div class="layui-input-inline">
-                <input type="text" name="kw"  placeholder="请输入标题" autocomplete="off" class="layui-input">
+                <input type="text" name="kw"  placeholder={%trans "请输入标题" %} autocomplete="off" class="layui-input">
               </div>
-              <button class="pear-btn pear-btn-primary pear-btn-sm" id="search">搜索</button>
+              <button class="pear-btn pear-btn-primary pear-btn-sm" id="search">{%trans "搜索" %}</button>
             </div>
             <div class="layui-form-item">
-              <label class="layui-form-label">文集</label>
+              <label class="layui-form-label">{%trans "文集" %}</label>
               <div class="layui-input-inline">
                 <select name="pro_id" lay-verify="required"  lay-filter="project" id="project">
-                    <option value="">按文集筛选</option>
+                    <option value="">{%trans "按文集筛选" %}</option>
                     {% for p in project_list %}
                         {% if p.role == 1 %}
-                        <option value="{{ p.id }}">[私密]《{{ p.name }}》</option>
+                        <option value="{{ p.id }}">[{%trans "私密" %}]《{{ p.name }}》</option>
                         {% elif p.role == 2 %}
-                        <option value="{{ p.id }}" >[指定用户]《{{ p.name }}》</option>
+                        <option value="{{ p.id }}" >[{%trans "指定用户" %}]《{{ p.name }}》</option>
                         {% elif p.role == 3 %}
-                        <option value="{{ p.id }}" >[访问码]《{{ p.name }}》</option>
+                        <option value="{{ p.id }}" >[{%trans "访问码" %}]《{{ p.name }}》</option>
                         {% else %}
-                        <option value="{{ p.id }}" >[公开]《{{ p.name }}》</option>
+                        <option value="{{ p.id }}" >[{%trans "公开" %}]《{{ p.name }}》</option>
                         {% endif %}
                     {% endfor %}
                 </select>
               </div>
             </div>
             <div class="layui-form-item">
-              <label class="layui-form-label">文档状态</label>
+              <label class="layui-form-label">{%trans "文档状态" %}</label>
               <div class="layui-input-block">
-                <input type="radio" name="status" title="全部({{all_cnt}})" value="-1" lay-skin="primary" checked lay-filter="doc_status">
-                <input type="radio" name="status" title="草稿({{draft_doc_cnt}})" value="0"  lay-skin="primary" lay-filter="doc_status">
-                <input type="radio" name="status" title="已发布({{published_doc_cnt}})" value="1" lay-skin="primary" lay-filter="doc_status">
+                <input type="radio" name="status" title={%trans "全部"%}({{all_cnt}}) value="-1" lay-skin="primary" checked lay-filter="doc_status">
+                <input type="radio" name="status" title={%trans "草稿"%}({{draft_doc_cnt}}) value="0"  lay-skin="primary" lay-filter="doc_status">
+                <input type="radio" name="status" title={%trans "已发布"%}({{published_doc_cnt}}) value="1" lay-skin="primary" lay-filter="doc_status">
               </div>
             </div>
         </div>
@@ -54,10 +54,10 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="doc-toolbar">
     <a class="pear-btn pear-btn-primary pear-btn-sm" href="/create_doc/" target="_blank">
-        <i class="layui-icon layui-icon-add-1"></i>新增
+        <i class="layui-icon layui-icon-add-1"></i>{%trans "新增" %}
     </a>
     <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="batchRemove">
-        <i class="layui-icon layui-icon-delete"></i>删除
+        <i class="layui-icon layui-icon-delete"></i>{%trans "删除" %}
     </button>
 </script>
 
@@ -70,12 +70,12 @@
         {{# }else if(d.status == 0){ }}
             <!-- <i class="layui-icon layui-icon-release" style="cursor: pointer;" onclick="fastPubDoc('{{d.id}}')" title="草稿状态，点击一键发布"></i>&nbsp; -->
             <span class="layui-badge-dot layui-bg-orange"></span>
-            <a href="/modify_doc/{{d.id}}/" target="_blank" title="修改文档：{{d.name}}">{{ d.name }} </a>
+            <a href="/modify_doc/{{d.id}}/" target="_blank" title={%trans "修改文档：{{d.name}}" %}>{{ d.name }} </a>
         {{# } }}
         {{#if (d.editor_mode in [1,2,3]) { }}
-            <i class="layui-icon layui-icon-form" title="普通文档"</i>
+            <i class="layui-icon layui-icon-form" title={%trans "普通文档" %}</i>
         {{# }else if(d.editor_mode == 4){ }}
-            <i class="layui-icon layui-icon-table" title="表格文档"</i>
+            <i class="layui-icon layui-icon-table" title={%trans "表格文档" %}</i>
         {{# } }}
     {% endverbatim %}
 </script>
@@ -84,10 +84,10 @@
 <script type="text/html" id="doc-status">
     {% verbatim %}
         {{#if (d.status == 1) { }}
-            <span class="layui-badge-rim">已发布</span>
+            <span class="layui-badge-rim">{%trans "已发布" %}</span>
         {{# }else if(d.status == 0){ }}
             <!-- <i class="layui-icon layui-icon-release" style="cursor: pointer;" onclick="fastPubDoc('{{d.id}}')" title="草稿状态，点击一键发布"></i>&nbsp; -->
-            <span class="layui-badge-rim" style="cursor: pointer;" onclick="fastPubDoc('{{d.id}}')" title="点击一键发布">草稿</span>
+            <span class="layui-badge-rim" style="cursor: pointer;" onclick="fastPubDoc('{{d.id}}')" title={%trans "点击一键发布"%}>{%trans "草稿" %}</span>
         {{# } }}
     {% endverbatim %}
 </script>
@@ -145,15 +145,15 @@
         let cols = [
             [
             {type: 'checkbox',width:20},
-                {title: '文档名称',field: 'name',align: 'left',templet:"#doc-name",minWidth:280},
-                {title: '状态',field: 'status',align: 'left',templet:"#doc-status",width:90},
-                {title: '上级',field: 'parent',align: 'left',},
-                {title: '文集',field: 'project_name',align: 'left',templet:"#project-role"},
-                {title: '编辑模式',field: 'editor_mode',align: 'left',templet:"#editor-mode",width:90},
-                {title: '展开下级',field: 'open_children',align: 'left',width:90, templet:"#open_children"},
-                {title: '文档作者',field: 'create_user',align: 'left',},
-                {title: '最后编辑',field: 'modify_time',align: 'left',templet:"#doc-modify-time"},
-                {title: '操作',toolbar: '#doc-bar',align: 'left',}            ]
+                {title: {%trans '文档名称' %},field: 'name',align: 'left',templet:"#doc-name",minWidth:280},
+                {title: {%trans '状态' %},field: 'status',align: 'left',templet:"#doc-status",width:90},
+                {title: {%trans '上级' %},field: 'parent',align: 'left',},
+                {title: {%trans '文集' %},field: 'project_name',align: 'left',templet:"#project-role"},
+                {title: {%trans '编辑模式' %},field: 'editor_mode',align: 'left',templet:"#editor-mode",width:90},
+                {title: {%trans '展开下级' %},field: 'open_children',align: 'left',width:90, templet:"#open_children"},
+                {title: {%trans '文档作者' %},field: 'create_user',align: 'left',},
+                {title: {%trans '最后编辑' %},field: 'modify_time',align: 'left',templet:"#doc-modify-time"},
+                {title: {%trans '操作' %},toolbar: '#doc-bar',align: 'left',}            ]
         ]
         // 渲染表格
         table.render({
@@ -173,11 +173,11 @@
         delDoc = function(doc_id){
             layer.open({
                 type:1,
-                title:'删除文档',
+                title:{%trans '删除文档' %},
                 area:'300px;',
                 id:'delPro',//配置ID
-                content:'<div style="margin-left:10px;">警告：此操作将删除此文档！</div>',
-                btn:['确定','取消'], //添加按钮
+                content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此文档！"%}</div>',
+                btn:['{%trans "确定" %}','{%trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
                     layer.load(1);
@@ -234,7 +234,7 @@
             // console.log(pro_id)
             layer.confirm('确定要删除这些文档？', {
                 icon: 3,
-                title: '提示'
+                title: {%trans '提示' %}
             }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
