--- a/template/app_api/single_doc_detail.html
+++ b/template/app_api/single_doc_detail.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name=renderer  content=webkit>
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="{{ doc.name }},{{ project.name }},{{site_keywords}}"/>
     <meta name="description" content="{{doc.pre_content | slice:"0:100"}}" />
-    <title>{{ doc.name }} - {{ project.name }} - {% if site_name != None and site_name != '' %}{{site_name}}{% else %}觅道文档{% endif %}</title>
+    <title>{{ doc.name }} - {{ project.name }} - {% if site_name != None and site_name != '' %}{{site_name}}{% else %}{%trans "觅道文档" %}{% endif %}</title>
     <link href="{% static 'layui/css/layui.css' %}?version={{mrdoc_version}}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'editor.md/css/editormd.css' %}?version={{mrdoc_version}}" />
     <link rel="stylesheet" href="{% static 'katex/katex.min.css' %}?version={{mrdoc_version}}" />
@@ -130,13 +130,13 @@
             <!-- <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title="切换侧边栏">
                 <i class="fa fa-align-justify"></i>
             </a> -->
-            <a class="btn pull-left font-small"  href="javascript:void(0);" title="缩小字体">
+            <a class="btn pull-left font-small"  href="javascript:void(0);" title={%trans "缩小字体" %}>
                 <i class="fa fa-font">-</i>
             </a>
-            <a class="btn pull-left font-large"  href="javascript:void(0);" title="放大字体">
+            <a class="btn pull-left font-large"  href="javascript:void(0);" title={% trans "放大字体" %}>
                 <i class="fa fa-font">+</i>
             </a>
-            <a class="btn pull-left font-switch" href="javascript:void(0);" title="切换字体类型">
+            <a class="btn pull-left font-switch" href="javascript:void(0);" title={% trans "切换字体类型" %}>
                 <i class="fa fa-text-height"></i>
             </a>
             <!-- 顶部工具栏 -->
@@ -144,7 +144,7 @@
             {% endblock %}
 
             <a class="btn pull-right" aria-label="" href="{% url 'pro_list' %}">
-                <i class="fa fa-home"></i> <span class="layui-hide-xs">首页</span>
+                <i class="fa fa-home"></i> <span class="layui-hide-xs">{% trans "首页" %}</span>
             </a>
         </div>
         <!-- 文档主体 -->
@@ -158,8 +158,8 @@
                         {% block content_head %}
                         <h1>{{ doc.name }}</h1><hr>
                         <p style="" class="project-doc-content-head">
-                            <i class="fa fa-user"></i> 作者：{{ doc.create_user.username }}
-                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-edit"></i> 最后修改于：{{ doc.modify_time }}
+                            <i class="fa fa-user"></i> {%trans "作者" %}：{{ doc.create_user.username }}
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-edit"></i> {%trans "最后修改于" %}：{{ doc.modify_time }}
                         </p>
                         {% endblock %}
 
@@ -486,12 +486,12 @@
         </ul>
     <div class="layui-tab-content" style="height: 100px;">
         <div class="layui-tab-item layui-show" align='center'>
-            <p style="font-weight: 700;margin-bottom: 10px;">手机扫一扫进行分享</p>
+            <p style="font-weight: 700;margin-bottom: 10px;">{%trans "手机扫一扫进行分享"%}</p>
             <div id="url_qrcode"></div>
         </div>
         <div class="layui-tab-item" align='center'>
             <input type="text" id="copy_crt_url" name="current_url" class="layui-input" /><br>
-            <button class="layui-btn layui-btn-radius layui-btn-xs" style="background-color: #333;" onclick="copyUrl();">复制链接</button>
+            <button class="layui-btn layui-btn-radius layui-btn-xs" style="background-color: #333;" onclick="copyUrl();">{%trans "复制链接" %}</button>
         </div>
     </div>
     </div> 
@@ -501,11 +501,11 @@
 <div id="dashang_img" style="display: none;">
     <div class="layui-tab layui-tab-brief">
         <ul class="layui-tab-title">
-          <li class="layui-this">微信</li>
-          <li>支付宝</li>
-          <li>QQ支付</li>
+          <li class="layui-this">{%trans "微信" %}</li>
+          <li>{%trans "支付宝" %}</li>
+          <li>{%trans "QQ支付" %}</li>
           <li>PayPal</li>
-          <li>项目源码</li>
+          <li>{%trans "项目源码" %}</li>
         </ul>
         <div class="layui-tab-content" style="height: 100px;">
           <div class="layui-tab-item layui-show" align='center'>
@@ -529,9 +529,9 @@
           <div class="layui-tab-item" align='center'>
             <p><a href="https://github.com/zmister2016/MrDoc" target="_blank">GitHub：https://github.com/zmister2016/MrDoc</a></p>
             <br>
-            <p><a href="https://gitee.com/zmister/MrDoc" target="_blank">码云：https://gitee.com/zmister/MrDoc</a> </p>
+            <p><a href="https://gitee.com/zmister/MrDoc" target="_blank">{%trans "码云" %}：https://gitee.com/zmister/MrDoc</a> </p>
             <br>
-            <p><a href="https://zmister.com" target="_blank">作者博客：https://zmister.com</a></p>
+            <p><a href="https://zmister.com" target="_blank">{%trans "作者博客" %}：https://zmister.com</a></p>
           </div>
         </div>
       </div> 
