--- a/template/app_doc/check_viewcode.html
+++ b/template/app_doc/check_viewcode.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang='zh-CN'>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name=renderer  content=webkit>
