--- a/template/app_doc/editor/tpl_editor_table.html
+++ b/template/app_doc/editor/tpl_editor_table.html
@@ -6,7 +6,7 @@
         var table_data = ($("#sheet_table_content").length > 0) ? JSON.parse($("#sheet_table_content").val()) : null;
         var options = {
             container: 'luckysheet', //luckysheet为容器id
-            lang: 'zh',
+            //lang: 'zh',
             showGridLines:true,
             allowEdit:true,
             showinfobar: false, // 是否显示顶部信息栏
