--- a/template/app_doc/manage/manage_doc_share.html
+++ b/template/app_doc/manage/manage_doc_share.html
@@ -27,9 +27,9 @@
     <script type="text/html" id="share-type">
         {% verbatim %}
         {{#if (d['share_type'] == '0') { }}
-        <span>公开</span>
+        <span>{%trans "公开"%}</span>
         {{# }else if(d['share_type'] == '1'){ }}
-        <span>私密</span>
+        <span>{%trans "私密"%}</span>
         {{# } }}
         {% endverbatim %}
     </script>
@@ -44,7 +44,7 @@
     <!-- 分享状态 -->
     <script type="text/html" id="share-enable">
         {% verbatim %}
-        <input type="checkbox" name="share-enable" value="{{d.token}}" lay-skin="switch" lay-text="启用|禁用" lay-filter="share-enable" {{ d.share_status == true ? 'checked' : '' }}>
+        <input type="checkbox" name="share-enable" value="{{d.token}}" lay-skin="switch" lay-text={%trans "启用|禁用"%} lay-filter="share-enable" {{ d.share_status == true ? 'checked' : '' }}>
         {% endverbatim %}
     </script>
 
@@ -65,11 +65,11 @@
         delTemp = function(doctemp_id){
             layer.open({
                 type:1,
-                title:'删除文档',
+                title:{%trans '删除文档'%},
                 area:'300px;',
                 id:'delPro',//配置ID
-                content:'<div style="margin-left:10px;">警告：此操作将删除此文档模板！</div>',
-                btn:['确定','取消'], //添加按钮
+                content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此文档模板！"%}</div>',
+                btn:['{%trans "确定"%}','{%trans "取消"%}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
                     layer.load(1);
@@ -94,12 +94,12 @@
         let cols = [
                 [
                     {type: 'checkbox'},
-                    {title: '文档名称',field: 'doc_name',align: 'left'},
-                    {title: '分享类型',field: 'share_type',align: 'left',width: 100,templet:"#share-type"},
-                    {title: '分享码',field: 'share_value',align: 'left',width: 100},
-                    {title: '分享时间',field: 'create_time',align: 'left',width: 150,templet:"#share-create-time"},
-                    {title: '状态',field: 'share_status',align: 'left',width: 100,templet:"#share-enable"},
-                    {title: '操作',toolbar: '#share-doc-bar',align: 'left',width: 130}
+                    {title: {%trans '文档名称'%},field: 'doc_name',align: 'left'},
+                    {title: {%trans '分享类型'%},field: 'share_type',align: 'left',width: 100,templet:"#share-type"},
+                    {title: {%trans '分享码'%},field: 'share_value',align: 'left',width: 100},
+                    {title: {%trans '分享时间'%},field: 'create_time',align: 'left',width: 150,templet:"#share-create-time"},
+                    {title: {%trans '状态'%},field: 'share_status',align: 'left',width: 100,templet:"#share-enable"},
+                    {title: {%trans '操作'%},toolbar: '#share-doc-bar',align: 'left',width: 130}
                 ]
             ]
         // 渲染表格
@@ -146,7 +146,7 @@
         window.remove = function(obj) {
             layer.confirm('确定要删除该分享？', {
                 icon: 3,
-                title: '提示'
+                title: {%trans '提示'%}
             }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
@@ -197,7 +197,7 @@
             console.log(tokens)
             layer.confirm('确定要删除这些分享？', {
                 icon: 3,
-                title: '提示'
+                title: {%trans '提示'%}
             }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
