--- a/template/app_doc/pro_list.html
+++ b/template/app_doc/pro_list.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name=renderer  content=webkit>
@@ -145,7 +145,7 @@
                                 {% if p.is_top %}<i class="iconfont mrdoc-icon-totop" title="置顶文集" style="color: red;font-size: 12px;"></i>{% endif %}
                                 <svg class="icon" aria-hidden="true"><use xlink:href="#{{p.icon}}"></use></svg> {{ p.name }}&nbsp;&nbsp;<span class="layui-badge-rim">{{p.id|get_doc_count}}</span>
                                 {% if p.create_user == request.user %}
-                                <a class="index-add-link" href="{% url 'create_doc' %}?pid={{p.id}}" target="_blank" title="新建此文档的下级文档">
+                                <a class="index-add-link" href="{% url 'create_doc' %}?pid={{p.id}}" target="_blank" title={%trans "新建此文档的下级文档" %}>
                                     <i class="layui-icon layui-icon-add-1"></i>
                                 </a>
                                 {% endif %}
@@ -155,7 +155,7 @@
                                 {% if p.is_top %}<i class="iconfont mrdoc-icon-totop" title="置顶文集" style="color: red;font-size: 12px;"></i>{% endif %}
                                 <svg class="icon" aria-hidden="true"><use xlink:href="#mrdoc-icon-pro-2"></use></svg> {{ p.name }}&nbsp;&nbsp;<span class="layui-badge-rim">{{p.id|get_doc_count}}</span>
                                 {% if p.create_user == request.user %}
-                                <a class="index-add-link" href="{% url 'create_doc' %}?pid={{p.id}}" target="_blank" title="新建此文档的下级文档">
+                                <a class="index-add-link" href="{% url 'create_doc' %}?pid={{p.id}}" target="_blank" title={%trans "新建此文档的下级文档" %}>
                                     <i class="layui-icon layui-icon-add-1"></i>
                                 </a>
                                 {% endif %}
