--- a/template/app_admin/admin_center.html
+++ b/template/app_admin/admin_center.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name=renderer  content=webkit>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>后台管理{% if site_name != None and site_name != '' %} - {{site_name}} {% endif %} - 觅道文档</title>
+        <title>{%trans "后台管理" %}{% if site_name != None and site_name != '' %} - {{site_name}} {% endif %} - {%trans "觅道文档"%}</title>
 		<link rel="icon" href="{% static 'search/mrdoc_logo_300.png' %}" sizes="192x192" />
 		<!-- 依 赖 样 式 -->
 		<link rel="stylesheet" href="{% static 'PearAdminLayui/component/pear/css/pear.css' %}" />
@@ -38,10 +38,10 @@
 						<!-- 功 能 菜 单 -->
 						<dl class="layui-nav-child">
 							{% if request.user.is_superuser %}
-							<dd><a href="{% url 'user_center' %}">个人中心</a></dd>
+							<dd><a href="{% url 'user_center' %}">{%trans "个人中心"%}</a></dd>
 							{% endif %}
-							<dd><a href="{% url 'pro_list' %}">返回首页</a></dd>
-						  <dd><a href="{% url 'logout' %}">退出登录</a></dd>
+							<dd><a href="{% url 'pro_list' %}">{%trans "返回首页"%}</a></dd>
+						  <dd><a href="{% url 'logout' %}">{%trans "退出登录" %}</a></dd>
 						</dl>
 					</li>
 					<!-- 主 题 配 置 -->
@@ -87,7 +87,7 @@
 				var popup = layui.popup;
                 var pear_admin_config = {
                     "logo": {
-                        "title": "站点管理",
+                        "title": {%trans "站点管理"%},
                         "image": "{% static 'mrdoc_logo_ridus.png' %}"
                     },
                     "menu": {
@@ -103,7 +103,7 @@
                         "index": {
                             "id": "10",
                             "href": "{% url 'admin_overview' %}",
-                            "title": "仪表盘"
+                            "title": {%trans "仪表盘" %}
                         }
                     },
                     "theme": {
@@ -132,17 +132,17 @@
 					],
                     "links": [{
                             "icon": "layui-icon layui-icon-website",
-                            "title": "官方网站",
+                            "title": {%trans "官方网站" %},
                             "href": "http://zmister.com/mrdoc/"
                         },
                         {
                             "icon": "layui-icon layui-icon-read",
-                            "title": "说明文档",
+                            "title": {%trans "说明文档" %},
                             "href": "http://mrdoc.zmister.com/project-7/"
                         },
                         {
                             "icon": "layui-icon layui-icon-fonts-code",
-                            "title": "开源地址",
+                            "title": {%trans "开源地址" %},
                             "href": "https://gitee.com/zmister/MrDoc"
                         },
                         {
@@ -152,7 +152,7 @@
                         },
 						{
                             "icon": "layui-icon layui-icon-log",
-                            "title": "当前版本：{{mrdoc_version}}",
+                            "title": {%trans "当前版本：{{mrdoc_version}}" %},
                             "href": "https://gitee.com/zmister/MrDoc/tree/{{mrdoc_version}}/"
                         }
                     ],
