--- a/template/app_api/manage_token.html
+++ b/template/app_api/manage_token.html
@@ -1,25 +1,25 @@
 {% extends 'app_doc/user/user_base.html' %}
 {% load static %}
 {% load i18n %}
-{% block title %}用户Token管理{% endblock %}
+{% block title %}{%trans "用户Token管理" %}{% endblock %}
 {% block content %}
 <div class="layui-card">
     <div class="layui-card-body">
         <blockquote class="layui-elem-quote layui-quote-nm" style="font-size: 12px;color: #999;">
-            借助Token，你可以无需打开觅道文档网站，直接通过更加自动化的方式进行文档编写；配合觅道文档浏览器剪藏扩展，还能将觅道文档化身为便捷的网页内容摘录工具；
+            {%trans "借助Token，你可以无需打开觅道文档网站，直接通过更加自动化的方式进行文档编写；配合觅道文档浏览器剪藏扩展，还能将觅道文档化身为便捷的网页内容摘录工具；" %}
             </blockquote>
             <div class="layui-row">
                 <form>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">Token值</label>
+                        <label class="layui-form-label">{%trans "Token值" %}</label>
                         <div class="layui-input-inline" style="width:450px;">
                             <input type="text" name="token" id="token" value="{{token}}" autocomplete="off" class="layui-input" readonly>
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">操作</label>
-                        <button class="pear-btn pear-btn-primary pear-btn-sm" type="button" id="copy-token" onclick="copyToken()">复制</button>
-                        <button class="pear-btn pear-btn-primary pear-btn-sm" type="button" onclick="generaToken()">重新生成Token</button>
+                        <label class="layui-form-label">{%trans "操作" %}</label>
+                        <button class="pear-btn pear-btn-primary pear-btn-sm" type="button" id="copy-token" onclick="copyToken()">{%trans "复制" %}</button>
+                        <button class="pear-btn pear-btn-primary pear-btn-sm" type="button" onclick="generaToken()">{%trans "重新生成Token" %}</button>
                     </div>
                 </form>
             </div>
@@ -47,11 +47,11 @@
         generaToken = function(){
             layer.open({
                 type:1,
-                title:'重置Token',
+                title:{%trans '重置Token'%},
                 area:'300px;',
                 id:'delPro',//配置ID
-                content:'<div style="margin:10px;">警告：此操作将重新为你的账户生成Token，旧Token将失效！</div>',
-                btn:['确定','取消'], //添加按钮
+                content:'<div style="margin:10px;">{%trans "警告：此操作将重新为你的账户生成Token，旧Token将失效！" %}</div>',
+                btn:['{%trans "确定" %}','{%trans "取消"%}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
                     layer.load(1);
