--- a/template/app_doc/editor/modify_doctemp.html
+++ b/template/app_doc/editor/modify_doctemp.html
@@ -1,20 +1,20 @@
 {% extends 'app_doc/editor/create_base.html' %}
 {% load static %}
 {% load i18n %}
-{% block title %}修改文档模板{% endblock %}
+{% block title %}{%trans "修改文档模板" %}{% endblock %}
 
 {% block head_toolbar %}
-    <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title="切换侧边栏">
+    <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title={%trans "切换侧边栏"%}>
         <i class="fa fa-align-justify"></i>
     </a>
     <a class="btn pull-left" aria-label="" href="{% url 'create_doctemp' %}?pid={{project.id}}" target="_blank">
-        <i class="fa fa-plus-square"></i> <span class="layui-hide-xs">新建模板</span>
+        <i class="fa fa-plus-square"></i> <span class="layui-hide-xs">{%trans "新建模板" %}</span>
     </a>
     <a class="btn pull-left" aria-label="" href="{% url 'manage_doctemp' %}?pid={{project.id}}" target="_blank">
-        <i class="fa fa-cubes"></i> <span class="layui-hide-xs">管理模板</span>
+        <i class="fa fa-cubes"></i> <span class="layui-hide-xs">{%trans "管理模板"%}</span>
     </a>
     <a class="btn pull-left" aria-label="" href="{% url 'manage_project' %}" target="_blank">
-        <i class="fa fa-cubes"></i> <span class="layui-hide-xs">管理文集</span>
+        <i class="fa fa-cubes"></i> <span class="layui-hide-xs">{%trans "管理文集%}</span>
     </a>
 {% endblock %}
 
@@ -24,7 +24,7 @@
             <div class="layui-col-md12" style="margin-bottom: 10px;">
                 <label class="doc-form-label">
                     <button class="layui-btn layui-btn-normal layui-btn-fluid" onclick="modifyDocTemp()">
-                        <i class="fa fa-save"></i> 保存模板
+                        <i class="fa fa-save"></i> {%trans "保存模板" %}
                     </button>
                 </label>
             </div>
@@ -32,17 +32,17 @@
         <div class="layui-col-md12" style="margin-bottom: 10px;">
             <label class="doc-form-label">
                 <button class="layui-btn layui-btn-primary layui-btn-fluid" id="doc-cache-btn">
-                    <i class="fa fa-save"></i> 本地缓存
+                    <i class="fa fa-save"></i> {%trans "本地缓存" %}
                 </button>
             </label>
         </div>
         <!-- 已有模板 -->
         <div class="layui-row">
             <div class="layui-card">
-                <div class="layui-card-header">现有模板</div>
+                <div class="layui-card-header">{%trans "现有模板" %}</div>
                 <div class="layui-card-body">
                     {% for temp in doctemps %}
-                        <li><a href="{% url 'modify_doctemp' temp.id %}" target="_blank" title="点击查看修改《{{temp.name}}》的内容"><i class="fa fa-file"></i> {{temp.name}}</a></li>
+                        <li><a href="{% url 'modify_doctemp' temp.id %}" target="_blank" title={%trans "点击查看修改《{{temp.name}}》的内容"%}><i class="fa fa-file"></i> {{temp.name}}</a></li>
                     {% endfor %}
                 </div>
             </div>
@@ -54,7 +54,7 @@
     <div class="create-doc-form">
         <div class="layui-form" style="padding-bottom:10px;">
             <div class="layui-input-block" style="margin-left:0px;">
-              <input type="text" name="doc-name" id="doctemp-name" required lay-verify="required" value="{{doctemp.name}}" placeholder="请输入模板名称" autocomplete="off" class="layui-input">
+              <input type="text" name="doc-name" id="doctemp-name" required lay-verify="required" value="{{doctemp.name}}" placeholder={%trans "请输入模板名称"%} autocomplete="off" class="layui-input">
             </div>
         </div>
     </div>
