--- a/template/app_doc/editor/tpl_editor_editormd.html
+++ b/template/app_doc/editor/tpl_editor_editormd.html
@@ -61,7 +61,7 @@
                 //var cursor    = cm.getCursor();     //获取当前光标对象，同cursor参数
                 //var selection = cm.getSelection();  //获取当前选中的文本，同selection参数
                 // 替换选中文本，如果没有选中文本，则直接插入
-                cm.replaceSelection('<span style="font-family:{%trans "楷体" %}>' + selection + "</span>");
+                cm.replaceSelection('<span style="font-family:楷体' + selection + "</span>");
                 // 如果当前没有选中的文本，将光标移到要输入的位置
                 if(selection === "") {
                     cm.setCursor(cursor.line, cursor.ch + 29);
