--- a/template/app_doc/manage/manage_doc.html
+++ b/template/app_doc/manage/manage_doc.html
@@ -10,7 +10,7 @@
             <div class="layui-form-item">
               <label class="layui-form-label">{% trans "关键词" %}</label>
               <div class="layui-input-inline">
-                <input type="text" name="kw"  placeholder="请输入标题" autocomplete="off" class="layui-input">
+                <input type="text" name="kw"  placeholder={%trans "请输入标题"%} autocomplete="off" class="layui-input">
               </div>
               <button class="pear-btn pear-btn-primary pear-btn-sm" id="search">{% trans "搜索" %}</button>
             </div>
@@ -20,24 +20,24 @@
                 <select name="pro_id" lay-verify="required"  lay-filter="project" id="project">
                     <option value="">{% trans "按文集筛选" %}</option>
                     <!-- 自己的文集 -->
-                    <optgroup label="自有文集" id="self-project">
+                    <optgroup label={%trans "自有文集"%} id="self-project">
                     {% for p in project_list %}
                         {% if p.role == 1 %}
-                        <option value="{{ p.id }}">[私密]《{{ p.name }}》</option>
+                        <option value="{{ p.id }}">[{%trans "私密"%}]《{{ p.name }}》</option>
                         {% elif p.role == 2 %}
-                        <option value="{{ p.id }}" >[指定用户]《{{ p.name }}》</option>
+                        <option value="{{ p.id }}" >[{%trans "指定用户"%}]《{{ p.name }}》</option>
                         {% elif p.role == 3 %}
-                        <option value="{{ p.id }}" >[访问码]《{{ p.name }}》</option>
+                        <option value="{{ p.id }}" >[{%trans "访问码"%}]《{{ p.name }}》</option>
                         {% else %}
-                        <option value="{{ p.id }}" >[公开]《{{ p.name }}》</option>
+                        <option value="{{ p.id }}" >[{%trans "公开"%}]《{{ p.name }}》</option>
                         {% endif %}
                     {% endfor %}
                     </optgroup>
                     <!-- 协作的文集 -->
                     {% if colla_project_list.count > 0 %}
-                    <optgroup label="协作文集">
+                    <optgroup label={%trans "协作文集"%}>
                     {% for p in colla_project_list %}
-                            <option value="{{ p.project.id }}">[协作]《{{ p.project.name }}》</option>
+                            <option value="{{ p.project.id }}">[{%trans "协作"%}]《{{ p.project.name }}》</option>
                     {% endfor %}
                     </optgroup>
                     {% endif %}
@@ -47,9 +47,9 @@
             <div class="layui-form-item">
               <label class="layui-form-label">{% trans "文档状态" %}</label>
               <div class="layui-input-block">
-                <input type="radio" name="status" title="全部({{all_cnt}})" value="-1" lay-skin="primary" checked lay-filter="doc_status">
-                <input type="radio" name="status" title="草稿({{draft_doc_cnt}})" value="0"  lay-skin="primary" lay-filter="doc_status">
-                <input type="radio" name="status" title="已发布({{published_doc_cnt}})" value="1" lay-skin="primary" lay-filter="doc_status">
+                <input type="radio" name="status" title={%trans "全部"%}({{all_cnt}}) value="-1" lay-skin="primary" checked lay-filter="doc_status">
+                <input type="radio" name="status" title={%trans "草稿"%}({{draft_doc_cnt}})  value="0"  lay-skin="primary" lay-filter="doc_status">
+                <input type="radio" name="status" title={%trans "已发布"%}({{published_doc_cnt}}) value="1" lay-skin="primary" lay-filter="doc_status">
               </div>
             </div>
         </div>
@@ -65,10 +65,10 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="doc-toolbar">
     <a class="pear-btn pear-btn-primary pear-btn-sm" href="/create_doc/" target="_blank">
-        <i class="layui-icon layui-icon-add-1"></i>新增
+        <i class="layui-icon layui-icon-add-1"></i>{%trans "新增"%}
     </a>
     <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="batchRemove">
-        <i class="layui-icon layui-icon-delete"></i>删除
+        <i class="layui-icon layui-icon-delete"></i>{%trans "删除"%}
     </button>
 </script>
 
@@ -80,12 +80,12 @@
             <a href="/project-{{d.project_id}}/doc-{{d.id}}" target="_blank">{{d.name}}</a>
         {{# }else if(d.status == 0){ }}
             <span class="layui-badge-dot layui-bg-orange"></span>
-            <a href="/modify_doc/{{d.id}}/" target="_blank" title="修改文档：{{d.name}}">{{ d.name }} </a>
+            <a href="/modify_doc/{{d.id}}/" target="_blank" title={%trans "修改文档：{{d.name}}"%}>{{ d.name }} </a>
         {{# } }}
         {{#if (d.editor_mode in [1,2,3]) { }}
-            <i class="layui-icon layui-icon-form" title="普通文档"</i>
+            <i class="layui-icon layui-icon-form" title={%trans "普通文档"%}</i>
         {{# }else if(d.editor_mode == 4){ }}
-            <i class="layui-icon layui-icon-table" title="表格文档"</i>
+            <i class="layui-icon layui-icon-table" title={%trans "表格文档"%}</i>
         {{# } }}
     {% endverbatim %}
 </script>
@@ -94,9 +94,9 @@
 <script type="text/html" id="doc-status">
     {% verbatim %}
         {{#if (d.status == 1) { }}
-            <span class="layui-badge-rim">已发布</span>
+            <span class="layui-badge-rim">{%trans "已发布"%}</span>
         {{# }else if(d.status == 0){ }}
-            <span class="layui-badge-rim" style="cursor: pointer;" onclick="fastPubDoc('{{d.id}}')" title="点击一键发布">草稿</span>
+            <span class="layui-badge-rim" style="cursor: pointer;" onclick="fastPubDoc('{{d.id}}')" title={%trans "点击一键发布"%}>{%trans "草稿"%}</span>
         {{# } }}
     {% endverbatim %}
 </script>
@@ -116,9 +116,9 @@
         {{# }else if(d.editor_mode == 2){ }}
             Vditor
         {{# }else if(d.editor_mode == 3){ }}
-            富文本
+        {%trans "富文本"%}
         {{# }else if(d.editor_mode == 4){ }}
-            在线表格
+        {%trans "在线表格"%}
         {{# } }}
     {% endverbatim %}
 </script>
@@ -127,9 +127,9 @@
 <script type="text/html" id="open_children">
     {% verbatim %}
         {{#if (d.open_children == true) { }}
-            展开
+        {%trans "展开"%}s
         {{# }{ }}
-            收起
+        {%trans "收起"%}
         {{# } }}
     {% endverbatim %}
 </script>
@@ -138,7 +138,7 @@
 <script type="text/html" id="doc-bar">
     {% verbatim %}
     <a href="/manage_doc_history/{{d.id}}/" class="pear-btn pear-btn-sm"><i class="layui-icon layui-icon-log"></i></a>
-    <a href="/modify_doc/{{d.id}}/" title="修改文档" class="pear-btn pear-btn-sm" target="_blank"><i class="layui-icon layui-icon-edit"></i></a>
+    <a href="/modify_doc/{{d.id}}/" title={%trans "修改文档" %} class="pear-btn pear-btn-sm" target="_blank"><i class="layui-icon layui-icon-edit"></i></a>
     <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove"><i class="layui-icon layui-icon-delete"></i></button>
     {% endverbatim %}
 </script>
@@ -158,14 +158,14 @@
         let cols = [
             [
             {type: 'checkbox',width:20},
-                {title: '文档名称',field: 'name',align: 'left',templet:"#doc-name",minWidth:280},
-                {title: '状态',field: 'status',align: 'left',templet:"#doc-status",width:90},
-                {title: '上级',field: 'parent',align: 'left',},
-                {title: '文集',field: 'project_name',align: 'left',templet:"#project-role"},
-                {title: '编辑模式',field: 'editor_mode',align: 'left',templet:"#editor-mode",width:90},
-                {title: '展开下级',field: 'open_children',align: 'left',width:90, templet:"#open_children"},
-                {title: '最后编辑',field: 'modify_time',align: 'left',templet:"#doc-modify-time"},
-                {title: '操作',toolbar: '#doc-bar',align: 'left',}            ]
+                {title: {%trans '文档名称' %},field: 'name',align: 'left',templet:"#doc-name",minWidth:280},
+                {title: {%trans '状态'%},field: 'status',align: 'left',templet:"#doc-status",width:90},
+                {title: {%trans '上级'%},field: 'parent',align: 'left',},
+                {title: {%trans '文集'%},field: 'project_name',align: 'left',templet:"#project-role"},
+                {title: {%trans '编辑模式'%},field: 'editor_mode',align: 'left',templet:"#editor-mode",width:90},
+                {title: {%trans '展开下级'%},field: 'open_children',align: 'left',width:90, templet:"#open_children"},
+                {title: {%trans '最后编辑'%},field: 'modify_time',align: 'left',templet:"#doc-modify-time"},
+                {title: {%trans '操作'%},toolbar: '#doc-bar',align: 'left',}            ]
         ]
         // 渲染表格
         table.render({
@@ -185,11 +185,11 @@
         delDoc = function(doc_id){
             layer.open({
                 type:1,
-                title:'删除文档',
+                title:{%trans '删除文档'%},
                 area:'300px;',
                 id:'delPro',//配置ID
-                content:'<div style="margin-left:10px;">警告：此操作将删除此文档！</div>',
-                btn:['确定','取消'], //添加按钮
+                content:'<div style="margin-left:10px;">{%trans "警告：此操作将删除此文档！"%}</div>',
+                btn:['{%trans "确定"%}','{%trans "取消"%}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
                     layer.load(1);
@@ -246,7 +246,7 @@
             // console.log(pro_id)
             layer.confirm('确定要删除这些文档？', {
                 icon: 3,
-                title: '提示'
+                title: {%trans '提示'%}
             }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
