--- a/template/app_doc/manage/manage_project.html
+++ b/template/app_doc/manage/manage_project.html
@@ -36,11 +36,11 @@
         {{d.name}}
         {{#if (d.role == 0) { }}
         {{# }else if(d.role == 1){ }}
-        <span  tooltip="私密" placement="right"><i class="layui-icon layui-icon-password"></i></span>
+        <span  tooltip={% trans "私密" %} placement="right"><i class="layui-icon layui-icon-password"></i></span>
         {{# }else if(d.role == 2){ }}
-        <span  tooltip="指定用户" placement="right"><i class="layui-icon layui-icon-user"></i></span>
+        <span  tooltip={% trans "指定用户" %} placement="right"><i class="layui-icon layui-icon-user"></i></span>
         {{# }else if(d.role == 3){ }}
-        <span  tooltip="访问码" placement="right"><i class="layui-icon layui-icon-key"></i></span>
+        <span  tooltip={% trans "访问码" %} placement="right"><i class="layui-icon layui-icon-key"></i></span>
         {{# } }}
     </a>
     {% endverbatim %}
@@ -49,9 +49,9 @@
 <!-- 单个文集操作 -->
 <script type="text/html" id="project-bar">
     {% verbatim %}
-    <a href="/manage_pro_doc_sort/{{d.id}}/" title="排序文档" class="pear-btn pear-btn-sm" lay-event="sort"><i class="layui-icon layui-icon-cols"></i></a>
-    <a href="/modify_pro/?pro_id={{d.id}}" title="修改文集配置" class="pear-btn pear-btn-sm"><i class="layui-icon layui-icon-set"></i></a>
-    <button class="pear-btn pear-btn-danger pear-btn-sm" title="删除文集" lay-event="remove"><i class="layui-icon layui-icon-delete"></i></button>
+    <a href="/manage_pro_doc_sort/{{d.id}}/" title={% trans "排序文档" %} class="pear-btn pear-btn-sm" lay-event="sort"><i class="layui-icon layui-icon-cols"></i></a>
+    <a href="/modify_pro/?pro_id={{d.id}}" title={% trans "修改文集配置" %} class="pear-btn pear-btn-sm"><i class="layui-icon layui-icon-set"></i></a>
+    <button class="pear-btn pear-btn-danger pear-btn-sm" title={% trans "删除文集" %} lay-event="remove"><i class="layui-icon layui-icon-delete"></i></button>
     {% endverbatim %}
 </script>
 
@@ -59,13 +59,13 @@
 <script type="text/html" id="project-role">
     {% verbatim %}
     {{#if (d.role == 0) { }}
-    <span>公开</span>
+    <span>{%trans "公开" %}</span>
     {{# }else if(d.role == 1){ }}
-    <span>私密</span>
+    <span>{% trans "私密" %}</span>
     {{# }else if(d.role == 2){ }}
-    <span>指定用户</span>
+    <span>{%trans "指定用户" %}</span>
     {{# }else if(d.role == 3){ }}
-    <span>访问码</span>
+    <span>{%trans "访问码" %}</span>
     {{# } }}
     {% endverbatim %}
 </script>
@@ -73,7 +73,7 @@
 <!-- 协作人数 -->
 <script type="text/html" id="colla-cnt">
     {% verbatim %}
-    <span>{{d.colla_total}}</span> <a href="/manage_project_colla/{{d.id}}/"  title="管理文集协作"><i class="layui-icon layui-icon-set"></i></a>
+    <span>{{d.colla_total}}</span> <a href="/manage_project_colla/{{d.id}}/"  title={% trans "管理文集协作" %}><i class="layui-icon layui-icon-set"></i></a>
     {% endverbatim %}
 </script>
 
@@ -151,7 +151,7 @@
                 title:'{% trans "新建文集" %}',
                 area:'300px;',
                 id:'createPro',//配置ID
-                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder="输入文集名" required  lay-verify="required"><textarea name="desc" id="desc" placeholder="输入文集简介" class="layui-textarea"></textarea></div>',
+                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder={% trans "输入文集名" %} required  lay-verify="required"><textarea name="desc" id="desc" placeholder={% trans "输入文集简介" %} class="layui-textarea"></textarea></div>',
                 btn:['{% trans "确定" %}','{% trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -182,7 +182,7 @@
                 title:'{% trans "修改文集" %}',
                 area:'300px;',
                 id:'modifyPro',//配置ID
-                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder="输入文集名" required  lay-verify="required" value="'+pro_name+'"><textarea name="desc" id="desc" placeholder="输入文集简介" class="layui-textarea">'+pro_intro+'</textarea></div>',
+                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder={% trans "输入文集名" %} required  lay-verify="required" value="'+pro_name+'"><textarea name="desc" id="desc" placeholder={% trans "输入文集简介" %} class="layui-textarea">'+pro_intro+'</textarea></div>',
                 btn:['{% trans "确定" %}','{% trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -214,7 +214,7 @@
                 title:'{% trans "删除文集" %}',
                 area:'300px;',
                 id:'delPro',//配置ID
-                content:'<div style="margin-left:10px;">你正在删除：<span style="font-weight:700;color:red;">【'+pro_name+'】</span><br><br>警告！此操作将<span style="font-weight:700;color:red;">删除此文集及文集下所有文档！</span>并且<span style="font-weight:700;color:red;">不可恢复！</span><br><br>请输入“DELETE”以再次确认删除。<br><input class="layui-input" style="width:95%;" id="confirm_delete_project" placeholder="DELETE"></div>',
+                content:'<div style="margin-left:10px;">{% trans 你正在删除 %}：<span style="font-weight:700;color:red;">【'+pro_name+'】</span><br><br>{%trans "警告！此操作将" %}<span style="font-weight:700;color:red;">{% trans "删除此文集及文集下所有文档！" %}</span>{% trans "并且" %}<span style="font-weight:700;color:red;">{% trans "不可恢复！"%} </span><br><br>{%trans "请输入"%} “DELETE”{% trans "以再次确认删除。"%} <br><input class="layui-input" style="width:95%;" id="confirm_delete_project" placeholder="DELETE"></div>',
                 btn:['{% trans "删除" %}','{% trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -266,7 +266,7 @@
                 title:'{% trans "删除文集" %}',
                 area:'300px;',
                 id:'delPro',//配置ID
-                content:'<div style="margin-left:10px;">你正在批量删除文集！<br><br>警告！此操作将<span style="font-weight:700;color:red;">删除所选文集及文集下所有文档！</span>并且<span style="font-weight:700;color:red;">不可恢复！</span><br><br>请输入“DELETE”以再次确认删除。<br><input class="layui-input" style="width:95%;" id="confirm_batch_delete_project" placeholder="DELETE"></div>',
+                content:'<div style="margin-left:10px;">{% trans "你正在批量删除文集！"%} <br><br>{% trans "警告！此操作将"%} <span style="font-weight:700;color:red;">{%trans "删除所选文集及文集下所有文档！"%} </span>{%trans "并且"%} <span style="font-weight:700;color:red;">{%trans "不可恢复！"%} </span><br><br>{%trans "请输入"%} “DELETE” {%trans "以再次确认删除。"%}<br><input class="layui-input" style="width:95%;" id="confirm_batch_delete_project" placeholder="DELETE"></div>',
                 btn:['{% trans "批量删除" %}','{% trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -322,8 +322,8 @@
                 title:"{% trans '打包文集' %}",
                 area:"300px",
                 id:"reportMd",
-                content:'<div style="margin-left:10px;">确定打包导出所选的文集？</div>',
-                btn:['确定','取消'], //添加按钮
+                content:'<div style="margin-left:10px;">{%trans "确定打包导出所选的文集？"%}</div>',
+                btn:['{%trans "确定" %}','{% trans "取消"%}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
                     var load = layer.load()
@@ -353,7 +353,7 @@
                 title:"{% trans '下载导出文档' %}",
                 area:"300px",
                 id:"downloadMd",
-                content:'<p style="text-align:center;color:red;">请尽快下载，避免失效！</p><br><a class="layui-btn layui-btn-fluid download-md-link" href="'+ download_link + '" download="mrdoc_report_md.zip" >点击下载文件(zip)</a>',
+                content:'<p style="text-align:center;color:red;">{%trans "请尽快下载，避免失效！"%}</p><br><a class="layui-btn layui-btn-fluid download-md-link" href="'+ download_link + '" download="mrdoc_report_md.zip" >{%trans "点击下载文件"%}(zip)</a>',
                 //btn:['确定','取消'], //添加按钮
                 //btnAlign:'c', //按钮居中
                 success: function (layero, index) {
