--- a/template/app_doc/search.html
+++ b/template/app_doc/search.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name=renderer  content=webkit>
@@ -34,7 +34,7 @@
             <div class="shlogo"></div>
             <div class="sou">
                 <form action="{% url 'doc_search' %}" method="get" target="_self">
-                    <input class="wd" type="text" placeholder="请输入搜索内容" name="q" x-webkit-speech lang="zh-CN">
+                    <input class="wd" type="text" placeholder={%trans "请输入搜索内容" %} name="q" x-webkit-speech>
                     <!-- <input name="type" value="doc" hidden> -->
                     <input name="d_range" value="all" hidden>
                     <button type="submit" style="background-image: url(/static/search/search_btn.svg);"></button>
@@ -44,7 +44,7 @@
                 </ul>
             </div>
         </div>
-        <div class="foot">© 2019-2021 by <a href="https://zmister.com/">州的先生</a> . All rights reserved.</div>
+        <div class="foot">© 2019-2021 by <a href="https://zmister.com/">{%trans "州的先生" %}</a> . All rights reserved.</div>
     </div>
     <!--
 作者:D.Young
