--- a/template/app_doc/search_result.html
+++ b/template/app_doc/search_result.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
@@ -34,7 +34,7 @@
             <form method="get" action="">
             <div class="layui-input-inline">
                 <input class="layui-input mrdoc-search-input" 
-                    placeholder="搜索文集或文档" name="kw" style="width: 500px;border-radius:5px" value="{{kw}}"/>
+                    placeholder={%trans "搜索文集或文档" %} name="kw" style="width: 500px;border-radius:5px" value="{{kw}}"/>
                 <input name="type" value="{{search_type}}" hidden>
                 <button type="submit" 
                     style="position: absolute;top:12px;right: 8px;border: none;background-color: white;">
@@ -117,7 +117,7 @@
             <div class="layui-inline">
                 <div class="layui-input-inline">
                     <input class="layui-input mrdoc-search-input" 
-                    placeholder="搜索文集或文档" name="kw" style="border-radius:5px" value="{{kw}}"/>
+                    placeholder={%trans "搜索文集或文档" %} name="kw" style="border-radius:5px" value="{{kw}}"/>
                     <input name="type" value="{{search_type}}" hidden>
                 </div>
                 <div class="layui-input-inline">
@@ -357,11 +357,11 @@
         changePwd = function(uid,username){
             layer.open({
                 type:1,
-                title:'修改密码',
+                title:{%trans "修改密码" %},
                 area:'300px;',
                 id:'changePwd',
-                content:'<div style="padding:10px 0 0 20px;">修改用户[' + username + ']的密码：</div><div style="padding: 20px;"><input class="layui-input" type="password" id="newPwd1" style="margin-bottom:10px;" placeholder="输入新密码" required  lay-verify="required"><input class="layui-input" type="password" id="newPwd2" placeholder="再次确认新密码" required  lay-verify="required"></div>',
-                btn:['确认修改','取消'],
+                content:'<div style="padding:10px 0 0 20px;"> {%trans "修改用户" %}[' + username + ']{%trans "的密码" %}：</div><div style="padding: 20px;"><input class="layui-input" type="password" id="newPwd1" style="margin-bottom:10px;" placeholder={%trans "输入新密码" %} required  lay-verify="required"><input class="layui-input" type="password" id="newPwd2" placeholder={%trans "再次确认新密码" %} required  lay-verify="required"></div>',
+                btn:[' {%trans "确认修改" %}','{% trans "取消" %}'],
                 yes:function (index,layero) {
                     layer.load(1);
                     data = {
