--- a/template/app_doc/tag_doc_base.html
+++ b/template/app_doc/tag_doc_base.html
@@ -62,14 +62,14 @@
         <!-- 文档搜索 -->
         <form action="" method="get">
             <div id="doc-search-input">
-                <input type="text" name="kw" placeholder=%{trans "输入并回车搜索" %} value="" class="layui-input doc-search-input">
+                <input type="text" name="kw" placeholder={%trans "输入并回车搜索" %} value="" class="layui-input doc-search-input">
             </div>
         </form>
         <!-- 文集名称 -->
         <div class="project-title">
             <i class="fa fa-tag"></i> {% trans "标签：" %}<a href="{% url 'tag_docs' tag.id %}">{{ tag.name }}
                 {% if project.role == 1 %}
-                    <i class="layui-icon layui-icon-password" title="私密文档"></i>
+                    <i class="layui-icon layui-icon-password" title={%trans "私密文档" %}></i>
                 {% endif %}
             </a>
         </div>
@@ -108,16 +108,16 @@
     <div class="doc-body">
         <!-- 文档导航 -->
         <div class="doc-header" role="navigation">
-            <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title=%{ trans "切换侧边栏" %}>
+            <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title={% trans "切换侧边栏" %}>
                 <i class="fa fa-align-justify"></i>
             </a>
-            <a class="btn pull-left font-small"  href="javascript:void(0);" title="缩小字体">
+            <a class="btn pull-left font-small"  href="javascript:void(0);" title={%trans "缩小字体" %}>
                 <i class="fa fa-font">-</i>
             </a>
-            <a class="btn pull-left font-large"  href="javascript:void(0);" title="放大字体">
+            <a class="btn pull-left font-large"  href="javascript:void(0);" title={%trans "放大字体" %}>
                 <i class="fa fa-font">+</i>
             </a>
-            <a class="btn pull-left font-switch" href="javascript:void(0);" title="切换字体类型">
+            <a class="btn pull-left font-switch" href="javascript:void(0);" title={%trans "切换字体类型" %}>
                 <i class="fa fa-text-height"></i>
             </a>
             <!-- 顶部工具栏 -->
@@ -194,17 +194,17 @@
 <div id="share_div" style="display: none;">
     <div class="layui-tab layui-tab-brief" lay-filter="docDemoTabBrief">
         <ul class="layui-tab-title">
-            <li class="layui-this">%{trans "微信扫一扫" %}</li>
-            <li>%{ trans "复制链接" %}</li>
+            <li class="layui-this">{%trans "微信扫一扫" %}</li>
+            <li>{% trans "复制链接" %}</li>
         </ul>
     <div class="layui-tab-content" style="height: 100px;">
         <div class="layui-tab-item layui-show" align='center'>
-            <p style="font-weight: 700;margin-bottom: 10px;">%{trans "手机扫一扫进行分享" %}</p>
+            <p style="font-weight: 700;margin-bottom: 10px;">{%trans "手机扫一扫进行分享" %}</p>
             <div id="url_qrcode"></div>
         </div>
         <div class="layui-tab-item" align='center'>
             <input type="text" id="copy_crt_url" name="current_url" class="layui-input" /><br>
-            <button class="layui-btn layui-btn-radius layui-btn-xs" style="background-color: #333;" onclick="copyUrl();">%{trans "复制链接" %}</button>
+            <button class="layui-btn layui-btn-radius layui-btn-xs" style="background-color: #333;" onclick="copyUrl();">{%trans "复制链接" %}</button>
         </div>
     </div>
     </div> 
@@ -214,11 +214,11 @@
 <div id="dashang_img" style="display: none;">
     <div class="layui-tab layui-tab-brief">
         <ul class="layui-tab-title">
-          <li class="layui-this">微信</li>
-          <li>支付宝</li>
+          <li class="layui-this">{%trans "微信" %}</li>
+          <li>{%trans "支付宝" %}</li>
           <li>QQ支付</li>
           <li>PayPal</li>
-          <li>项目源码</li>
+          <li>{%trans "项目源码" %}</li>
         </ul>
         <div class="layui-tab-content" style="height: 100px;">
           <div class="layui-tab-item layui-show" align='center'>
@@ -242,9 +242,9 @@
           <div class="layui-tab-item" align='center'>
             <p><a href="https://github.com/zmister2016/MrDoc" target="_blank">GitHub：https://github.com/zmister2016/MrDoc</a></p>
             <br>
-            <p><a href="https://gitee.com/zmister/MrDoc" target="_blank">码云：https://gitee.com/zmister/MrDoc</a> </p>
+            <p><a href="https://gitee.com/zmister/MrDoc" target="_blank">{%trans "码云" %}：https://gitee.com/zmister/MrDoc</a> </p>
             <br>
-            <p><a href="https://zmister.com" target="_blank">作者博客：https://zmister.com</a></p>
+            <p><a href="https://zmister.com" target="_blank">{%trans "作者博客" %}：https://zmister.com</a></p>
           </div>
         </div>
       </div> 
