--- a/template/forget_pwd.html
+++ b/template/forget_pwd.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang='zh-CN'>
+<html>
 <head>
 	<title>{% trans "忘记密码" %} - {% if site_name != None %}{{site_name}} {% else %}{% trans "觅道文档" %}{% endif %}</title>
 	<meta charset="utf-8" />
@@ -45,18 +45,18 @@
                 <span style='color:red;margin-bottom: 10px;'>{{ errormsg }}</span>
                 <div class="layui-form-item">
                     <div class="layui-input-inline">
-                      <input type="text" name="email" id="email" required  lay-verify="required" placeholder="请输入注册邮箱"  class="layui-input">
+                      <input type="text" name="email" id="email" required  lay-verify="required" placeholder={%trans "请输入注册邮箱"%}  class="layui-input">
                     </div>
                     <button class="layui-btn layui-btn-normal" type="button" id="send_email_vcode" onclick="getCode(this)">{% trans "发送验证码" %}</button>
                 </div>
                 <div class="layui-form-item">
-                  <input type="text" name="vcode" required  lay-verify="required" placeholder="请输入验证码" autocomplete="off" class="layui-input">
+                  <input type="text" name="vcode" required  lay-verify="required" placeholder={%trans "请输入验证码" %} autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                  <input type="password" name="password" required  lay-verify="required" placeholder="请输入新密码" autocomplete="off" class="layui-input">
+                  <input type="password" name="password" required  lay-verify="required" placeholder={% trans "请输入新密码" %} autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                  <input type="password" name="confirm_password" required  lay-verify="required" placeholder="请确认新密码" autocomplete="off" class="layui-input">
+                  <input type="password" name="confirm_password" required  lay-verify="required" placeholder={%trans "请确认新密码" %} autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
                     <button class="layui-btn layui-btn-fluid layui-btn-radius  layui-btn-normal" lay-submit type="submit">{% trans "修改密码" %}</button>
@@ -109,7 +109,7 @@
             //e.setAttribute("onclick","getcode(this)");
 
             btn.attr("disabled", false);
-			btn.html("获取验证码");
+			btn.html({%trans "获取验证码" %});
 			btn.removeClass("disabled");
 			btn.removeClass("layui-btn-disabled")
             time = 60;
@@ -121,7 +121,7 @@
             btn.addClass("disabled");
             btn.addClass("layui-btn-disabled")
 			btn.attr("disabled", true);
-			btn.html("重新发送(" + time + ")");
+			btn.html({% trans "重新发送(" %} + time + ")");
 
             //document.getElementById("getcode").innerHTML="重新发送"+time;
             time--;
