--- a/template/register.html
+++ b/template/register.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang='zh-CN'>
+<html>
 <head>
 	<title>{% trans "用户注册" %} - {% if site_name != None %}{{site_name}} {% else %}{% trans "觅道文档" %}{% endif %}</title>
 	<meta charset="utf-8" />
